# GraphEmbedding

GEL/: ReadMe  setup.cfg
GEL/embeddings/: emb.txt  output.txt
GEL/src/graph_embedding/: embed_train.py  eval_result.txt  evaluation.py  label.txt  main.py  ouput.txt  output.txt  pipeline.py  visualize_embedding.py
GEL/src/graph_embedding/MatrixFactorization/: graph.py  grarep.py  hope.py  line.py  node2vec.py  sdne.py
GEL/src/graph_embedding/NN/: initialization.py  layers.py  preprocessing.py  train_model.py
GEL/src/graph_embedding/eval_metrics/: eval_metrics.py  metrics.py
GEL/src/graph_embedding/evaluation/: evaluation.py
GEL/src/graph_embedding/struc2vec/: algorithms.py  algorithms_distances.py  graph.py  struc2vec.py  utils.py
GEL/src/graph_embedding/training/: embed_train.py  utils.py
GEL/src/graph_embedding/visualization/: visualize_embedding.py
GELib/: setup.cfg
GELib/embeddings/: emb.txt
GELib/src/graph_embedding/: eval_result.txt  main.py  pipeline.py
GELib/src/graph_embedding/MF_RW/: classify.py  gf.py  lap.py  line.py  node2vec.py  walker.py
GELib/src/graph_embedding/NN/: model.py  preprocessing.py
GELib/src/graph_embedding/SVD/: model.py
GELib/src/graph_embedding/training/: embed_train.py  utils.py
documentation/: .~lock.ReportDraft.odt#  Presentation.odp  ReportDraft.odt
