##########################
# Setup.py Configuration #
##########################
[metadata]
name = GELib
version = 0.1.0-dev
description = Graph Embedding Library
long_description = file: README.md
long_description_content_type = text/markdown


# Search tags
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =

[options]
install_requires =
    numpy
    networkx
    scipy
    tensorflow < 2.0.0
    gensim
    scikit-learn
    tqdm
    fastdtw
    matplotlib    

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    graph_embedding = graph_embedding.main:more_main
